fix: dark mode fixed and navbar changed to sidebar

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 html {
   margin: 0;
   padding: 0;
-  
+
   font-family: "Roboto", sans-serif;
 }
 
@@ -13,23 +13,32 @@ body {
   color: #113264;
 }
 
-body.dark{
-    background-color: #0D1520;
-    color: #C2E6FF !important;
+.dark {
+  background-color: #0d1520 !important;
+  color: #c2e6ff !important;
 }
-
 ul {
   list-style-type: none;
 }
 
 .navbar {
-  padding: 10px 0;
-  margin-top: 15px;
-  border: 1px solid #5eb1ef;
-  border-radius: 10px;
-  position: absolute;
-  top: 50px;
-  width: 80%;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #0d1520;
+  color: #c2e6ff;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+.navbar-button, .list-navbar button{
+  background-color: #0d1520;
+  padding: 15px;
+  color: #c2e6ff;
+  border-radius: 50px;
 }
 
 button {
@@ -49,6 +58,12 @@ button {
   margin: 0 10px;
   display: flex;
   align-items: center;
+  text-transform: uppercase;
+}
+.list-navbar button{
+  background-color: #0d1520;
+  padding: 15px;
+  border-radius: 50px;
 }
 .list-navbar:hover {
   background-color: #5eb1ef;
@@ -66,25 +81,28 @@ button {
   align-items: center;
   justify-content: center;
   min-height: 80vh;
+  margin-top: 20px;
 }
-.hero-section h2{
-    margin-bottom: 25px;
+.hero-section h2 {
+  margin-bottom: 25px;
 }
 .hero-items {
   display: flex;
   align-items: center;
   margin: 20px;
 }
-.hero-items-img{
-    max-width: 20%;
-    margin-right: 20px;
+.hero-items-img {
+  font-size: 4em;
+  margin-right: 20px;
 }
 @media (min-width: 1024px) {
   .navbar {
-    display: block !important;
     border: none;
     position: inherit;
-    width: auto;
+    width: auto !important;
+    background: none;
+    padding: 0;
+    color: inherit;
   }
   ul {
     display: flex;
@@ -97,16 +115,16 @@ button {
     align-items: center;
     justify-content: space-between;
   }
-  .hero-items{
+  .hero-items {
     justify-content: flex-start;
   }
-  .hero-section{
+  .hero-section {
     display: flex;
   }
-  .hero-items-container{
+  .hero-items-container {
     display: flex;
   }
-  .hero-items-img{
+  .hero-items-img {
     max-width: 30%;
   }
 }
